- Adding auth google
- Adding model user
- Adding model google

--- a/assets/javascripts/backbone/apps/home/index/templates/home.jst.jade
+++ b/assets/javascripts/backbone/apps/home/index/templates/home.jst.jade
@@ -1,1 +1,2 @@
-a.google-auth-button(href='#') Login with google
+- console.log(googleAuthPath, '==========')
+a.google-auth-button(href= googleAuthPath()) Login with google
