--- a/assets/javascripts/backbone/apps/home/index/templates/layout.jst.jade
+++ b/assets/javascripts/backbone/apps/home/index/templates/layout.jst.jade
@@ -1,3 +1,11 @@
-.button-google-auth-region
-.home-region
-.input-room-name-region
+header
+  .input-room-name-region
+
+section
+  .home-region
+  .button-google-auth-region
+  .status-region
+  .users-region
+
+footer
+  .points-region
